<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food Lab Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Guía FLC</string>
    
    <string name="definition">Definición</string>
    <string name="about">Acerca de</string>
    
    
    <string name="Ope_1">PROTEÍNA</string>
    <string name="Ope_2">HUMEDAD</string>
    <string name="Ope_3">GRASA</string>
    <string name="Ope_4">FIBRA CRUDA</string>
    <string name="Ope_5">CENIZA</string>
    
    <string name="title1">FOOD  LAB</string>
    <string name="title2">CALCULATOR</string>
    
	<string name="guide">Protein: Following Kjeltec Method.\nMoisture: Gravimetric calculation, oven drying.\nFat: Gravimetric calculation solvent extraction. \nFiber: Gravimetric calculation of crude fiber.\nAsh: Gravimetric calculation of Ashing.</string>
	    
	<string name="subtitle1">Proteína:</string>
    <string name="desc1">Siguiente método Kjeltec.</string>
    <string name="subtitle2">Humedad:</string>
    <string name="desc2">Cálculo gravimétrico, horno de secado.</string>
    <string name="subtitle3">Grasa:</string>
    <string name="desc3">Extracción con disolvente cálculo gravimétrico.</string>
    
    <string name="w.sample">Peso Muestra (gr)</string>
    <string name="vol.sample">Vol. Muestra (ml)</string>
    <string name="vol.blank">Vol. Blanco (ml)</string>
    <string name="N">Normalización</string>
    
    <string name="weight1">Peso Inicial (gr)</string>
    <string name="weight2">Peso Intermedio (gr)</string>
    <string name="weight3">Peso Final (gr)</string>    
    
    <string name="rpta">Calcular</string>
    
    <string name="el_result_1">El resultado es:</string>
    <string name="el_result_2">de</string>
    
    
    <string name="guide_protein">Peso Inicial:\nEs el peso antes del secado.\n\nPeso Final:\nEs el peso después del secado.</string>
    <string name="guide_moisture">Peso Inicial:\nEs el peso antes del secado.\n\nPeso Final:\nEs el peso después del secado.</string>
    <string name="guide_fat">Peso Inicial:\nEs el peso antes del secado.\n\nPeso Final:\nEs el peso después del secado.</string>
    <string name="guide_fiber">Peso Inicial:\nEs el peso antes de derrotar a la muestra.\n\nPeso Intermedio:\nes el peso después de la hidrólisis ácida y alcalina.\n\nPeso Final:\nEs el peso después de la incineración.</string>
    <string name="guide_ash">Peso Inicial:\nEs el peso antes de la incineración\n\nPeso Final:\nEs el peso después de la incineración.</string>
    
    
    
</resources>
