<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp" >

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle1"
        android:textStyle="bold"
        android:textSize="17sp"
         />

    <TextView
        android:id="@+id/txt_desc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc1"
        android:layout_marginBottom="10dip" 
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle2" 
        android:textStyle="bold"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/txt_desc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc2"
        android:layout_marginBottom="10dip"
        android:textSize="17sp" />
    
        <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle3"
        android:textStyle="bold"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/txt_desc3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc3"
        android:textSize="17sp" />

</LinearLayout>